--- a/index.html
+++ b/index.html
@@ -1,23 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio project using HTML basics</title>
-</head>
-<body>
-    <h1>Ankit Kumar Personal Portfolio </h1>
-    <h2>I Am a web developer</h2>
-</body>
-</html>
-<hr>
+<!-- Example image URL -->
+<h1>Hurrrey!! you are invited in My Birthday Party</h1>
+<h2>on the upcoming sunday 10th December 2023</h2>
+<img src= "https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg" />
 
-<h2><a href="./public/index.html">Birthday Invite</a></h2>
-
-<img src="./assets/images/Birthday-invite01.png" height="200" alt="brthday card preview">
-
-<h2><a href="./public/index01.html">Movie Ranking</a></h2>
-<img src="./assets/images/movie-ranking01.png" height="200" alt="movie screenhot preview">
-<hr>
-<a href="./public/about.html">About Me</a>
-<a href="./public/contact.html">Contact Me</a>
+<h3>What to bring:</h3>
+<ul>
+    <li>Baloons(I Love Baloons)</li>
+    <li>Cake(I Am very good at eating)</li>
+    <li>An Appetite(There will be lots of food)</li>
+</ul>
+<!-- Example Google Maps Link -->
+<a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">GOOGLE MAP</a>
